# cloudops-rag-eval

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/corpus/: 01-onboarding.md  02-cloud-run-deployments.md  03-ml-pipelines.md  04-security-access.md  05-billing-quotas.md  06-troubleshooting.md  07-api-reference.md  08-faq.md
eval/: questions.json
infra/: main.tf  outputs.tf  variables.tf
src/cloudops_rag_eval/: __init__.py  api.py  config.py  documents.py  embeddings.py  eval_runner.py  logging.py  main.py  middleware.py  providers.py  retrieval.py  schemas.py  service.py
tests/: test_api.py  test_eval_runner.py  test_logging.py  test_providers.py  test_retrieval.py
